{
    "name": "MouseClicks",
    "maps": [
        {
            "name": "PlayerMouse",
            "id": "7da3bdc6-b2ce-4cc9-acc5-3ff26cfd3b25",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "9b2074bc-d647-469f-b394-b716a217bb3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "10d840b9-d76e-4740-a2e7-9087ca06de3f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a3fb7e77-cb30-421c-b877-66b32cbb6f72",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84f75607-5141-4187-a148-a5beb74e6bb4",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}